k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nomnomnom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nomnomnom
  template:
    metadata:
      labels:
        app: nomnomnom
    spec:
      containers:
        - name: nomnomnom
          image: ghcr.io/arnewaschenbach/nomnomnom:latest
          ports:
            - containerPort: 4000
