k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nomnomnom
spec:
  selector:
    app: nomnomnom
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
