k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nomnomnom-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nomnomnomh.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nomnomnom
                port:
                  number: 80
                             
    - host: www.nomnomnomh.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nomnomnom
                port:
                  number: 80
